# vector-dbs

./: .gitignore  chromadb-example.ipynb  pinecone-delete.ipynb  pinecone-fetch.ipynb  pinecone-hello.ipynb  pinecone-index-management.ipynb  pinecone-insert.ipynb  pinecone-query.ipynb  pinecone-update.ipynb  pinecone-using-metadata.ipynb  pinecone-using-namespace.ipynb  pyproject.toml  qdrant-example.ipynb  sqlite-example.ipynb  sqlite-storing-and-retrieving-vectors.ipynb
