[project]
name = "vector-dbs"
version = "0.0.1"
description = "Jupyter notebooks for trying vector DBs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pinecone>=7.3.0",
    "qdrant-client>=1.15.1",
]
